Clean up ArticlesController

--- a/spec/fixtures/articles.yml
+++ b/spec/fixtures/articles.yml
@@ -1,56 +1,71 @@
 ---
 article:
   id: 1
-  title: Dolorem vero assumenda dolores.
-  body: ! "---\n- Alias nam nesciunt quibusdam impedit distinctio fuga. Reprehenderit
-    ut odit. Ut\n  enim nihil et excepturi consequatur ducimus est. Ab vel sapiente
-    soluta aliquam\n  aut.\n- Aut sint ex. Ab rerum recusandae tempora soluta quam
-    eaque. Libero consequatur temporibus\n  voluptatem dicta voluptate facere.\n-
-    Non natus nihil. Atque ipsam harum eligendi dolorem aut. Molestiae omnis pariatur\n
-    \ necessitatibus quam quaerat dolorum.\n- Quis veritatis et aliquid accusamus
-    quo. Quia fugiat eius. Ad nemo sapiente est\n  adipisci perspiciatis amet. Ullam
-    dolores quis laudantium in.\n- Consectetur placeat voluptas minima. Non ratione
-    ipsam exercitationem. Eum autem\n  expedita aut molestiae voluptatem quo hic.
-    Et necessitatibus fugiat facilis vel\n  maiores. Minima laboriosam eaque aspernatur
-    debitis qui.\n"
-  category_id: 1
-  created_at: 2013-05-07 01:26:56.841613000 Z
-  updated_at: 2013-05-07 01:26:56.841613000 Z
+  title: Cum praesentium voluptatem mollitia debitis officia et.
+  body: |
+    ---
+    - Repudiandae in quia tempora ad amet magnam enim. Nisi molestiae dolores eveniet
+      aut ab cum autem. Molestiae iusto commodi. Est commodi ex. Architecto reiciendis
+      et cumque repudiandae ad.
+    - Autem laudantium ea culpa quod. Aut incidunt atque et autem omnis mollitia magnam.
+      Quisquam sunt quae. Quisquam aspernatur dolore est eius assumenda. Consequatur repellat
+      corrupti architecto perspiciatis sunt cumque.
+    - Odio nihil impedit velit nemo. Veritatis quo autem odio accusantium consequuntur
+      delectus. Quasi voluptas cupiditate repellat dolor. Assumenda nemo maxime ut. Vero
+      voluptatum quam asperiores eum.
+    - Est soluta voluptas non itaque nesciunt. Neque voluptatem aperiam voluptatum. Quia
+      officia temporibus autem voluptates ea in perspiciatis. Et illo non odio atque aut
+      repudiandae cupiditate. Architecto culpa itaque ut soluta.
+    - Alias optio velit. Beatae magni quia harum impedit. Quis aspernatur et sequi. Suscipit
+      ipsa earum et expedita quaerat sunt. Dicta autem aut aut iure cumque.
+  category_id: 3
+  created_at: 2013-10-14 18:07:23.000000000 Z
+  updated_at: 2013-10-14 18:07:23.000000000 Z
   published: false
   author_id: 
 unpublished_article:
   id: 2
-  title: Ut sed voluptatibus ducimus provident.
-  body: ! "---\n- Inventore vitae deserunt hic expedita repellendus quasi accusantium.
-    Quae aut eum\n  tempore velit quia dolor. Quas quibusdam sequi quo.\n- Est rerum
-    voluptate excepturi id et. Aperiam incidunt hic voluptatum at consequatur\n  nihil
-    soluta. Est qui reprehenderit. Ex sit quia commodi.\n- Rem quia expedita dolores
-    velit. Magnam voluptatibus dolorem. Et aliquam praesentium\n  sit ex voluptatum
-    facilis quidem. Sed voluptate assumenda. Numquam assumenda consectetur\n  et quia
-    aliquam.\n- Consequatur aut quia ut. Quo quas dicta aspernatur voluptas sint qui.
-    Dolorum molestias\n  modi tempore in accusamus. Fugiat voluptas nam tenetur rerum
-    quam. Aut repellat\n  quisquam.\n- Dolorum ratione laudantium fuga. Ipsum praesentium
-    facilis ut est dolorem repudiandae.\n  Placeat voluptatem et exercitationem laudantium
-    soluta repellendus quia. Rerum eaque\n  fuga odio sed. Et temporibus iusto.\n"
-  category_id: 2
-  created_at: 2013-05-07 01:26:57.011460000 Z
-  updated_at: 2013-05-07 01:26:57.011460000 Z
+  title: Quia enim harum saepe porro nesciunt.
+  body: |
+    ---
+    - Eaque qui velit omnis sint sint. Earum commodi magnam. Cupiditate voluptas vitae
+      cumque. Tempora fugiat ipsam qui voluptatem.
+    - Fugiat voluptates dolor quis voluptas cum. Exercitationem harum officiis incidunt
+      ipsa blanditiis quis illo. Ratione sit ad voluptatum non.
+    - Maiores pariatur cupiditate vel ab suscipit impedit ullam. Impedit dolorem iusto
+      aperiam distinctio aspernatur consequatur. Ducimus et pariatur accusamus delectus
+      aliquid vitae. Laboriosam nobis et. At rerum quis.
+    - Ipsam et voluptatum. Illo est velit iure molestias sed. Veritatis nam quo. Aut quis
+      consequatur.
+    - Aut reprehenderit culpa dolorum et. Eos cupiditate soluta corrupti sint ut. Modi
+      quia sunt est quis voluptatem voluptatum. Qui placeat et similique dolores. Ut ea
+      minus.
+  category_id: 4
+  created_at: 2013-10-14 18:07:23.000000000 Z
+  updated_at: 2013-10-14 18:07:23.000000000 Z
   published: false
   author_id: 4
 published_article:
   id: 3
-  title: Exercitationem est ea quidem voluptate.
-  body: ! "---\n- Quia animi unde dolore fugit nesciunt sit vero. Optio sit facere
-    ad non cum. Sit\n  quia natus ea itaque rerum.\n- Omnis at doloribus. Quaerat
-    maxime magnam veritatis cumque. Consequatur et ut perferendis.\n  Sit sequi ipsum
-    ea molestias consequatur veniam. Nam consectetur suscipit et adipisci\n  illum
-    ut.\n- Expedita iusto vero. Provident velit magni repellat eligendi aut quibusdam.
-    Qui\n  et deleniti. Eveniet libero dolor iusto tenetur vel.\n- Excepturi quod
-    rerum officia. Earum nobis aut. Ab debitis libero.\n- Est unde voluptatibus occaecati
-    facere. Voluptates consequatur occaecati debitis\n  et quod. Quas omnis inventore.
-    Non culpa accusamus atque.\n"
-  category_id: 3
-  created_at: 2013-05-07 01:26:57.122602000 Z
-  updated_at: 2013-05-07 01:26:57.122602000 Z
+  title: Incidunt ea et repellat excepturi qui.
+  body: |
+    ---
+    - Eum animi tenetur ut et expedita. Necessitatibus culpa voluptatem. Voluptates nobis
+      fuga facere omnis ipsam officiis. Velit fugit quibusdam omnis accusamus et sed tempora.
+      In ut eum vel et nesciunt.
+    - Est mollitia voluptatibus sint eaque minima ratione. Necessitatibus harum odio quo
+      sapiente consequatur occaecati. Quam ea molestiae voluptas dolor tempora quas voluptate.
+      Earum eveniet culpa et vero atque molestias occaecati. At sint velit omnis illo
+      aspernatur commodi ut.
+    - A veniam quasi beatae totam quidem recusandae. Delectus dolor quaerat animi labore
+      enim quis perferendis. Doloremque sunt in magnam dolorem ipsum non.
+    - Est quo perspiciatis tempore. Autem eos quo nulla omnis dolorem. Aliquam perferendis
+      tenetur libero. Ducimus quia consequatur suscipit vel. Voluptas nulla cumque aut
+      reprehenderit aperiam.
+    - Amet aperiam delectus nulla. Corporis a unde molestiae tenetur dolorem iste. Necessitatibus
+      fuga neque est sit laborum quo cum. Dolore tempore hic.
+  category_id: 5
+  created_at: 2013-10-14 18:07:23.000000000 Z
+  updated_at: 2013-10-14 18:07:23.000000000 Z
   published: true
   author_id: 5
