--- a/spec/fixtures/categories.yml
+++ b/spec/fixtures/categories.yml
@@ -1,19 +1,19 @@
 ---
-pariatur:
-  id: 1
-  name: pariatur
-  description: Qui praesentium sapiente et.
-  created_at: 2013-05-07 01:26:56.810211000 Z
-  updated_at: 2013-05-07 01:26:56.810211000 Z
-ut:
-  id: 2
-  name: ut
-  description: Quaerat id ea ut blanditiis.
-  created_at: 2013-05-07 01:26:56.903678000 Z
-  updated_at: 2013-05-07 01:26:56.903678000 Z
-repellat:
+veniam:
   id: 3
-  name: repellat
-  description: Enim tempora sunt minus delectus eaque veniam.
-  created_at: 2013-05-07 01:26:57.021739000 Z
-  updated_at: 2013-05-07 01:26:57.021739000 Z
+  name: veniam
+  description: Qui aperiam facere molestiae.
+  created_at: 2013-10-14 18:07:23.000000000 Z
+  updated_at: 2013-10-14 18:07:23.000000000 Z
+inventore:
+  id: 4
+  name: inventore
+  description: Dicta laborum cumque aliquam et quis.
+  created_at: 2013-10-14 18:07:23.000000000 Z
+  updated_at: 2013-10-14 18:07:23.000000000 Z
+reprehenderit:
+  id: 5
+  name: reprehenderit
+  description: Quis consectetur impedit laborum.
+  created_at: 2013-10-14 18:07:23.000000000 Z
+  updated_at: 2013-10-14 18:07:23.000000000 Z
