--- a/spec/fixtures/tags.yml
+++ b/spec/fixtures/tags.yml
@@ -1,46 +1,16 @@
 ---
 omnis:
-  id: 1
-  name: omnis
-  created_at: 2013-05-07 01:26:56.832109000 Z
-  updated_at: 2013-05-07 01:26:56.832109000 Z
-exercitationem:
-  id: 2
-  name: exercitationem
-  created_at: 2013-05-07 01:26:56.835295000 Z
-  updated_at: 2013-05-07 01:26:56.835295000 Z
-temporibus:
   id: 3
-  name: temporibus
-  created_at: 2013-05-07 01:26:56.837310000 Z
-  updated_at: 2013-05-07 01:26:56.837310000 Z
-libero:
+  name: omnis
+  created_at: 2013-10-14 18:07:23.000000000 Z
+  updated_at: 2013-10-14 18:07:23.000000000 Z
+pariatur:
   id: 4
-  name: libero
-  created_at: 2013-05-07 01:26:56.906254000 Z
-  updated_at: 2013-05-07 01:26:56.906254000 Z
-unde:
+  name: pariatur
+  created_at: 2013-10-14 18:07:23.000000000 Z
+  updated_at: 2013-10-14 18:07:23.000000000 Z
+vel:
   id: 5
-  name: unde
-  created_at: 2013-05-07 01:26:56.908237000 Z
-  updated_at: 2013-05-07 01:26:56.908237000 Z
-voluptas:
-  id: 6
-  name: voluptas
-  created_at: 2013-05-07 01:26:56.910027000 Z
-  updated_at: 2013-05-07 01:26:56.910027000 Z
-aut:
-  id: 7
-  name: aut
-  created_at: 2013-05-07 01:26:57.024496000 Z
-  updated_at: 2013-05-07 01:26:57.024496000 Z
-beatae:
-  id: 8
-  name: beatae
-  created_at: 2013-05-07 01:26:57.026504000 Z
-  updated_at: 2013-05-07 01:26:57.026504000 Z
-mollitia:
-  id: 9
-  name: mollitia
-  created_at: 2013-05-07 01:26:57.028061000 Z
-  updated_at: 2013-05-07 01:26:57.028061000 Z
+  name: vel
+  created_at: 2013-10-14 18:07:23.000000000 Z
+  updated_at: 2013-10-14 18:07:23.000000000 Z
