--- a/spec/fixtures/users.yml
+++ b/spec/fixtures/users.yml
@@ -1,16 +1,16 @@
 ---
 user:
   id: 1
-  username: Alta
-  email: yasmine@millerstroman.com
+  username: Lemuel
+  email: meagan@ernserterry.net
   is_email_validated: 
-  first_name: Claudine
-  last_name: Jacobson
+  first_name: Kale
+  last_name: Abernathy
   is_enabled: 
   is_deleted: 
-  created_at: 2013-05-07 01:26:56.561379000 Z
-  updated_at: 2013-05-07 01:26:56.561379000 Z
-  encrypted_password: $2a$10$lpMgZticPEeJrBXxOtHVKe1YvU/4BD3x0TD8bHdscDzivOjCUTlVO
+  created_at: 2013-10-14 18:07:23.000000000 Z
+  updated_at: 2013-10-14 18:07:23.000000000 Z
+  encrypted_password: $2a$04$cY5jc82TW0H081JbmSGrEesbr1EofJzNS0mVWpubKMsz39f0C0XLG
   reset_password_token: 
   reset_password_sent_at: 
   remember_created_at: 
@@ -21,16 +21,16 @@ user:
   last_sign_in_ip: 
 non_admin:
   id: 2
-  username: Humberto
-  email: stephon@baumbach.biz
+  username: Rebekah
+  email: shanon@kilback.name
   is_email_validated: 
-  first_name: Nolan
-  last_name: Hamill
+  first_name: Tyra
+  last_name: Zulauf
   is_enabled: 
   is_deleted: 
-  created_at: 2013-05-07 01:26:56.656476000 Z
-  updated_at: 2013-05-07 01:26:56.656476000 Z
-  encrypted_password: $2a$10$9h3BFUIDX728uW/CJYVto.LKsQcsqMx2w1FraLrbwhLwcxs8sEUNy
+  created_at: 2013-10-14 18:07:23.000000000 Z
+  updated_at: 2013-10-14 18:07:23.000000000 Z
+  encrypted_password: $2a$04$u1C4Zxtl/a44D4OIzhpENuRRzNPS6L2RXuyjJMApbPfJblyz6ee2i
   reset_password_token: 
   reset_password_sent_at: 
   remember_created_at: 
@@ -41,16 +41,16 @@ non_admin:
   last_sign_in_ip: 
 admin:
   id: 3
-  username: Tyree
-  email: rosetta@ortizgoldner.info
+  username: Henriette
+  email: leopold_wintheiser@schuppe.net
   is_email_validated: 
-  first_name: Kale
-  last_name: Green
+  first_name: Watson
+  last_name: Armstrong
   is_enabled: 
   is_deleted: 
-  created_at: 2013-05-07 01:26:56.752007000 Z
-  updated_at: 2013-05-07 01:26:56.752007000 Z
-  encrypted_password: $2a$10$nPxgkPFUqD0GxaIdb7GoUOv1MQzJp4mJxdFZ3qHIQabC.M5RQgiMi
+  created_at: 2013-10-14 18:07:23.000000000 Z
+  updated_at: 2013-10-14 18:07:23.000000000 Z
+  encrypted_password: $2a$04$ddAshVafhDeQNbe0L0p..OSjiLDl93XNN5Li4/dNMBVKifAI/uSJC
   reset_password_token: 
   reset_password_sent_at: 
   remember_created_at: 
@@ -59,18 +59,18 @@ admin:
   last_sign_in_at: 
   current_sign_in_ip: 
   last_sign_in_ip: 
-kay:
+benedict:
   id: 4
-  username: Kay
-  email: nova@kohlerrodriguez.net
+  username: Benedict
+  email: orpha@parkerwaelchi.net
   is_email_validated: 
-  first_name: Laney
-  last_name: Hane
+  first_name: Milo
+  last_name: Schuster
   is_enabled: 
   is_deleted: 
-  created_at: 2013-05-07 01:26:57.005366000 Z
-  updated_at: 2013-05-07 01:26:57.005366000 Z
-  encrypted_password: $2a$10$Tp181AXhsL/WYPsX8GgLE.dC0yxJQlViCUdMQtbpLtfvp5HuZt4.y
+  created_at: 2013-10-14 18:07:23.000000000 Z
+  updated_at: 2013-10-14 18:07:23.000000000 Z
+  encrypted_password: $2a$04$Ca4mqMUnvMjz7KenRYKrl.MO03AxSsOloGQOVP1I6.OeNuDtyGzsS
   reset_password_token: 
   reset_password_sent_at: 
   remember_created_at: 
@@ -79,18 +79,18 @@ kay:
   last_sign_in_at: 
   current_sign_in_ip: 
   last_sign_in_ip: 
-savanah:
+jordyn:
   id: 5
-  username: Savanah
-  email: jakob_jenkins@hahnbins.net
+  username: Jordyn
+  email: theo@quitzon.name
   is_email_validated: 
-  first_name: Devin
-  last_name: Hickle
+  first_name: Abbey
+  last_name: Schmidt
   is_enabled: 
   is_deleted: 
-  created_at: 2013-05-07 01:26:57.118121000 Z
-  updated_at: 2013-05-07 01:26:57.118121000 Z
-  encrypted_password: $2a$10$vqekR4xc3GQPON3Twpz7ce1FGDWX2fpKQajcT5Wy6AmpQjBSUFeve
+  created_at: 2013-10-14 18:07:23.000000000 Z
+  updated_at: 2013-10-14 18:07:23.000000000 Z
+  encrypted_password: $2a$04$2C/cdTiNMqf66od8qqBlre6koiinlkqkFsWm.zKZJDoWk3.dLqjXm
   reset_password_token: 
   reset_password_sent_at: 
   remember_created_at: 
